add trace down recursive methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 server.port = 8088
 
+split.count=300
+
 bi.datasource.url = jdbc:sqlserver://192.168.227.139:1433;databaseName=KSSPMIOT_BI_B_0131
 bi.datasource.username = sa
 bi.datasource.password = Realtech1002
 bi.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# BI连接池验证连接是否可用
+bi.datasource.test-on-borrow = true
+bi.datasource.validation-query = SELECT 1
 
 mybatis.type-aliases-package = com.zjrealtech.tracedemo.domain.model
