--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,11 @@ server.port = 8088
 
 split.count=300
 
-bi.datasource.url = jdbc:sqlserver://192.168.227.139:1433;databaseName=KSSPMIOT_BI_B_0226
+bi.datasource.jdbcUrl = jdbc:sqlserver://192.168.227.139:1433;databaseName=KSSPMIOT_BI_B_0226
 bi.datasource.username = sa
 bi.datasource.password = Realtech1002
 bi.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+bi.datasource.maximumPoolSize = 5
 
 # BI连接池验证连接是否可用
 bi.datasource.test-on-borrow = true
